Use % rather than vh/vw for chat wrapper, to avoid interfering with scrollbars

--- a/herring/puzzles/static/style.less
+++ b/herring/puzzles/static/style.less
@@ -47,7 +47,7 @@ body {
 			left: 0;
 			background: @mainColor;
 			width: @defaultChatWidth;
-			height: 100vh;
+			height: 100%;
 		}
 	}
 
@@ -66,7 +66,7 @@ body {
 			width: 100%;
 
 			#chat-wrapper {
-				width: 100vw;
+				width: 100%;
 				height: @defaultChatHeight;
 				position: inherit;
 			}
